Fixed css bug re z-index

--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,11 @@ code {
   color: var(--secondary-color);
 }
 
+.user-options {
+  position: relative;
+  z-index: 1;
+};
+
 .home {
   width: auto;
   height: 80%;
@@ -305,7 +310,7 @@ code {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 15px;
-  top: 480px;
+  top: 600px;
 }
 
 .RestaurantPage {
@@ -406,7 +411,7 @@ code {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active1, .dot:hover {
   background-color: #717171;
 }
 
